--- a/.github/actions/set-env-variables/action.yml
+++ b/.github/actions/set-env-variables/action.yml
@@ -9,3 +9,6 @@ runs:
         echo "QUAY_ORGANIZATION_DEV=cilium" >> $GITHUB_ENV
         # no prod yet
         echo "QUAY_CHARTS_ORGANIZATION_DEV=cilium-charts-dev" >> $GITHUB_ENV
+        # renovate: datasource=github-releases depName=cilium/cilium-cli
+        CILIUM_CLI_VERSION="v0.15.19"
+        echo "CILIUM_CLI_VERSION=$CILIUM_CLI_VERSION" >> $GITHUB_ENV
