--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -303,7 +303,7 @@ jobs:
               if [[ \$keys_in_use == 2 ]]; then
                 break
               fi
-              echo "Waiting until key rotation starts"
+              echo "Waiting until key rotation starts (seeing \$keys_in_use keys)"
               sleep 30s
             done
 
@@ -315,7 +315,7 @@ jobs:
               if [[ \$keys_in_use == 1 ]]; then
                 break
               fi
-              echo "Waiting until key rotation completes"
+              echo "Waiting until key rotation completes (seeing \$keys_in_use keys)"
               sleep 30s
             done
 
