--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -84,6 +84,7 @@ jobs:
             kpr: 'disabled'
             tunnel: 'disabled'
             encryption: 'ipsec'
+            ipv6: 'false' # due to https://github.com/cilium/cilium/issues/23461
 
           - name: '2'
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
@@ -93,6 +94,7 @@ jobs:
             tunnel: 'disabled'
             encryption: 'ipsec'
             endpoint-routes: 'true'
+            ipv6: 'false' # due to https://github.com/cilium/cilium/issues/23461
 
           - name: '3'
             # We don't want to update bpf-next after branching
@@ -102,6 +104,7 @@ jobs:
             tunnel: 'vxlan'
             encryption: 'ipsec'
             endpoint-routes: 'false' # Due to https://github.com/cilium/cilium/pull/22333
+            ipv6: 'false' # due to https://github.com/cilium/cilium/issues/23461
 
     timeout-minutes: 60
     steps:
