identity: node-selector-labels
This commit adds a new flag `--enable-node-selector-labels` which takes advantage of the
new IdentityScopeRemoteNode. If this flag is enabled it will filter out
node labels based on `--node-labels` list and will append that to
remote-node label. This also adds a new label source
LabelSourceNode="node" which is prepended to all node labels.

Signed-off-by: Ondrej Blazek <ondrej.blazek@firma.seznam.cz>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -841,6 +841,7 @@ data:
   enable-well-known-identities: "false"
 {{- end }}
   enable-remote-node-identity: {{ .Values.remoteNodeIdentity | quote }}
+  enable-node-selector-labels: {{ .Values.nodeSelectorLabels | quote }}
 
 {{- if hasKey .Values "synchronizeK8sNodes" }}
   synchronize-k8s-nodes: {{ .Values.synchronizeK8sNodes | quote }}
