bgpv2: introducing BGP operator
Introducing BGP control plane operator. This operator generates per node
CiliumBGPNodeConfig object based on CiliumBGPClusterConfig or
CiliumBGPPeeringPolicy.

Operator also provides backwards compatibility by creating various BGPv2
objects based on CiliumBGPPeeringPolicy object.

Signed-off-by: harsimran pabla <hpabla@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -388,6 +388,7 @@ Makefile* @cilium/build
 /MAINTAINERS.md @cilium/contributing
 /netlify.toml @cilium/ci-structure
 /operator/ @cilium/operator
+/operator/pkg/bgpv2 @cilium/sig-bgp
 /operator/pkg/ciliumenvoyconfig @cilium/sig-servicemesh
 /operator/pkg/controller-runtime @cilium/sig-servicemesh
 /operator/pkg/gateway-api @cilium/sig-servicemesh
