bgpv2: introduce flag to enable bgpv2 APIs
Introducing helm field and feature flag to enable BGPv2 APIs. This is
done so we can safely introduce BGPv2 changes.

Signed-off-by: harsimran pabla <hpabla@isovalent.com>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -1091,6 +1091,7 @@ data:
 {{- if .Values.bgpControlPlane.enabled }}
   enable-bgp-control-plane: "true"
   bgp-secrets-namespace: {{ .Values.bgpControlPlane.secretsNamespace.name | quote }}
+  bgp-v2-api-enabled: {{ .Values.bgpControlPlane.v2Enabled | quote }}
 {{- else }}
   enable-bgp-control-plane: "false"
 {{- end }}
