gh: datapath-verifier: also run on 6.1 kernel
[ upstream commit 5594aad51cdcfb2277cca35246ec465bf0e6a86a ]

We don't depend on any 6.1-specific features, so it's fine to run the
5.10 complexity configs.

Signed-off-by: Julian Wiedmann <jwi@isovalent.com>

--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -82,6 +82,9 @@ jobs:
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
           - kernel: '5.15-20231124.100406'
             ci-kernel: '510'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          - kernel: '6.1-20231124.100406'
+            ci-kernel: '510'
             # We don't want to update bpf-next after branching
           - kernel: 'bpf-next-20230420.212204'
             ci-kernel: 'netnext'
