--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -253,6 +253,10 @@ jobs:
             ./contrib/scripts/kind.sh --xdp "" 3 "" "" "${{ matrix.kube-proxy }}" "dual"
 
             kubectl patch node kind-worker3 --type=json -p='[{"op":"add","path":"/metadata/labels/cilium.io~1no-schedule","value":"true"}]'
+
+            #kubectl create -n kube-system secret generic cilium-ipsec-keys \
+            #  --from-literal=keys="hmac(sha256) $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64)) cbc(aes) $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64))"
+
             kubectl create -n kube-system secret generic cilium-ipsec-keys \
               --from-literal=keys="3 rfc4106(gcm(aes)) $(echo $(dd if=/dev/urandom count=20 bs=1 2> /dev/null | xxd -p -c 64)) 128"
 
@@ -283,7 +287,9 @@ jobs:
 
             KEYID=\$(kubectl get secret -n kube-system cilium-ipsec-keys -o go-template --template={{.data.keys}} | base64 -d | cut -c 1)
             if [[ \$KEYID -ge 15 ]]; then KEYID=0; fi
-            data=\$(echo "{\"stringData\":{\"keys\":\"\$(((\$KEYID+1))) "hmac\(sha512\)" 8b4d92bf9396e7febb4d51e87394bb158ebcc0d9d57e4da8e938b0e931223ec7 "cbc\(aes\)" \"}}")
+
+            #  --from-literal=keys="hmac(sha256) $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64)) cbc(aes) $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64))"
+            data=\$(echo "{\"stringData\":{\"keys\":\"\$(((\$KEYID+1))) "hmac\(sha256\)" $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64)) "cbc\(aes\)" $(echo $(dd if=/dev/urandom count=32 bs=1 2> /dev/null| xxd -p -c 64)) \"}}")
             kubectl patch secret -n kube-system cilium-ipsec-keys -p="\$data" -v=1
 
             # Wait until key rotation starts
