--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -309,6 +309,17 @@ jobs:
             # interruption in such flows.
             ./cilium-cli connectivity test --include-conn-disrupt-test --conn-disrupt-test-setup
 
+      - name: Install pwru
+        uses: cilium/little-vm-helper@908ab1ff8a596a03cd5221a1f8602dc44c3f906d # v0.0.12
+        with:
+          provision: 'false'
+          cmd: |
+            cd /host/
+            LATEST_RELEASE=https://github.com/cilium/pwru/releases/download/v1.0.4/pwru-linux-amd64.tar.gz
+            curl -LO \${LATEST_RELEASE}
+            tar xfv pwru-linux-amd64.tar.gz
+            mv pwru /usr/local/bin
+
       - name: Upgrade Cilium & Test (${{ matrix.name }})
         if: ${{ steps.vars.outputs.downgrade_version != '' }}
         uses: cilium/cilium/.github/actions/conn-disrupt-test@v1.14
@@ -323,6 +334,20 @@ jobs:
             ./cilium-cli status --wait
             kubectl get pods --all-namespaces -o wide
             kubectl -n kube-system exec daemonset/cilium -- cilium status
+
+      - name: Run pwru (1)
+        uses: cilium/little-vm-helper@908ab1ff8a596a03cd5221a1f8602dc44c3f906d # v0.0.12
+        with:
+          provision: 'false'
+          cmd: |
+            kubectl get pod -l name=test-conn-disrupt-client
+            kubectl get pod -l name=test-conn-disrupt-client -o=jsonpath='{.status}'
+            kubectl get pod -l name=test-conn-disrupt-client -o=jsonpath='{.status.podIPs[1].ip}'
+            SRC_IP=\$(kubectl get pod -l name=test-conn-disrupt-client -o=jsonpath='{.status.podIPs[1].ip}')
+            DEST_IP=\$(kubectl get pod -l name=test-conn-disrupt-server -o=jsonpath='{.status.podIPs[1].ip}')
+            echo SRC_IP: \$SRC_IP
+            echo DEST_IP: \$DEST_IP
+            pwru --output-tuple --output-meta --filter-track-skb --output-file=/host/pwru1.log 'host \$SRC_IP and host \$DEST_IP' &
 
       - name: Downgrade Cilium to ${{ steps.vars.outputs.downgrade_version }} & Test (${{ matrix.name }})
         if: ${{ steps.vars.outputs.downgrade_version != '' }}
@@ -339,6 +364,17 @@ jobs:
             kubectl get pods --all-namespaces -o wide
             kubectl -n kube-system exec daemonset/cilium -- cilium status
 
+      - name: Run pwru (2)
+        uses: cilium/little-vm-helper@908ab1ff8a596a03cd5221a1f8602dc44c3f906d # v0.0.12
+        with:
+          provision: 'false'
+          cmd: |
+            SRC_IP=\$(kubectl get pod -l name=test-conn-disrupt-client -o=jsonpath='{.status.podIPs[1].ip}')
+            DEST_IP=\$(kubectl get pod -l name=test-conn-disrupt-server -o=jsonpath='{.status.podIPs[1].ip}')
+            echo SRC_IP: \$SRC_IP
+            echo DEST_IP: \$DEST_IP
+            pwru --output-tuple --output-meta --filter-track-skb --output-file=/host/pwru2.log 'host \$SRC_IP and host \$DEST_IP' &
+
       - name: Fetch artifacts
         if: ${{ steps.vars.outputs.downgrade_version != '' && !success() }}
         uses: cilium/little-vm-helper@8410a93e544b7e180a2365e5fdab0724a39bc02a # v0.0.13
@@ -352,6 +388,14 @@ jobs:
             ./cilium-cli sysdump --output-filename cilium-sysdump-${{ matrix.name }}-final
             # To debug https://github.com/cilium/cilium/issues/26062
             head -n -0 /proc/buddyinfo /proc/pagetypeinfo
+
+      - name: Upload artifacts pwru
+        if: ${{ !success() }}
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+        with:
+          name: pwru
+          path: /host/pwru*.log
+          retention-days: 5
 
       - name: Upload artifacts
         if: ${{ steps.vars.outputs.downgrade_version != '' && !success() }}
