e2e-upgrade: enable hostfw on direct routing + endpoint routes test
Signed-off-by: Timo Beckers <timo@isovalent.com>

--- a/.github/workflows/tests-e2e-upgrade.yaml
+++ b/.github/workflows/tests-e2e-upgrade.yaml
@@ -126,7 +126,7 @@ jobs:
             lb-mode: 'dsr'
             endpoint-routes: 'true'
             egress-gateway: 'true'
-            host-fw: 'false' # enabling breaks downgrading (missed tail calls)
+            host-fw: 'true'
 
           - name: '6'
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
