helm: Add extraVolumes and extraVolumeMounts to hubble-relay
[ upstream commit 76126b7ef3024ae6589fe38ddd2c49df056ef8eb ]

Signed-off-by: Andrii Iuspin <yuspin@gmail.com>
Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/install/kubernetes/cilium/templates/hubble-relay/deployment.yaml
+++ b/install/kubernetes/cilium/templates/hubble-relay/deployment.yaml
@@ -91,6 +91,9 @@ spec:
             mountPath: /var/lib/hubble-relay/tls
             readOnly: true
           {{- end }}
+          {{- with .Values.hubble.relay.extraVolumeMounts }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           terminationMessagePolicy: FallbackToLogsOnError
       restartPolicy: Always
       priorityClassName: {{ .Values.hubble.relay.priorityClassName }}
@@ -158,5 +161,8 @@ spec:
                 - key: tls.key
                   path: server.key
           {{- end }}
+      {{- end }}
+      {{- with .Values.hubble.relay.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
       {{- end }}
 {{- end }}
