--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -59,9 +59,9 @@ serviceAccounts:
     create: true
     # -- Enabled is temporary until https://github.com/cilium/cilium-cli/issues/1396 is implemented.
     # Cilium CLI doesn't create the SAs for node-init, thus the workaround. Helm is not affected by
-    # this issue. Name and automount can be configured, if enabled is set to true. 
+    # this issue. Name and automount can be configured, if enabled is set to true.
     # Otherwise, they are ignored. Enabled can be removed once the issue is fixed.
-    # Cilium-nodeinit DS must also be fixed. 
+    # Cilium-nodeinit DS must also be fixed.
     enabled: false
     name: cilium-nodeinit
     automount: true
@@ -1105,6 +1105,12 @@ hubble:
       type: RollingUpdate
       rollingUpdate:
         maxUnavailable: 1
+
+    # -- Additional hubble-relay volumes.
+    extraVolumes: []
+
+    # -- Additional hubble-relay volumeMounts.
+    extraVolumeMounts: []
 
     # -- hubble-relay security context
     securityContext: {}
