policy: Move Listener from L4Filter to PerSelectorPolicy
Allow different selectors on the same L4Filter use different Envoy
Listeners. This relaxes the policy import (L4Filter merge) logic by only
failing out if there is a Listener conflict on the same cached selector.

This change is needed to allow different Envoy Listeners to be applied on
traffic on the same port, depending on the destination (for an egress
policy). Consequently, we must handle conflicting proxy ports on the same
MapState key, originating from different selectors selecting the same
remote identity. We do this with a new optional Listener priority value.

Listener priority, if not specified, or for redirects for which an
explicit listener name is not given, defaults to the value of the proxy
port itself. This serves as a tie-breaking rule so that the redirection
is deterministic also in cases where a policy with a listener reference
and a CNP L7 policy on a different selectors that then happen to select
the same identities.

By convention proxy port values are between 10000-20000, so defining a
low priority value (e.g., 1) gives precedence to a Listener reference
against CNP policies.

Use MapState.Diff to report the difference between the obtained and
expected MapState on test failures.

Signed-off-by: Jarno Rajahalme <jarno@isovalent.com>

--- a/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumclusterwidenetworkpolicies.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumclusterwidenetworkpolicies.yaml
@@ -396,6 +396,14 @@ spec:
                                 description: Name is the name of the listener.
                                 minLength: 1
                                 type: string
+                              priority:
+                                description: Priority for this Listener that is used
+                                  when multiple rules would apply different listeners
+                                  to a policy map entry. Behavior of this is implementation
+                                  dependent.
+                                maximum: 100
+                                minimum: 1
+                                type: integer
                             required:
                             - envoyConfig
                             - name
@@ -1765,6 +1773,14 @@ spec:
                                 description: Name is the name of the listener.
                                 minLength: 1
                                 type: string
+                              priority:
+                                description: Priority for this Listener that is used
+                                  when multiple rules would apply different listeners
+                                  to a policy map entry. Behavior of this is implementation
+                                  dependent.
+                                maximum: 100
+                                minimum: 1
+                                type: integer
                             required:
                             - envoyConfig
                             - name
@@ -2929,6 +2945,14 @@ spec:
                                   description: Name is the name of the listener.
                                   minLength: 1
                                   type: string
+                                priority:
+                                  description: Priority for this Listener that is
+                                    used when multiple rules would apply different
+                                    listeners to a policy map entry. Behavior of this
+                                    is implementation dependent.
+                                  maximum: 100
+                                  minimum: 1
+                                  type: integer
                               required:
                               - envoyConfig
                               - name
@@ -4319,6 +4343,14 @@ spec:
                                   description: Name is the name of the listener.
                                   minLength: 1
                                   type: string
+                                priority:
+                                  description: Priority for this Listener that is
+                                    used when multiple rules would apply different
+                                    listeners to a policy map entry. Behavior of this
+                                    is implementation dependent.
+                                  maximum: 100
+                                  minimum: 1
+                                  type: integer
                               required:
                               - envoyConfig
                               - name
