--- a/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
@@ -400,6 +400,14 @@ spec:
                                 description: Name is the name of the listener.
                                 minLength: 1
                                 type: string
+                              priority:
+                                description: Priority for this Listener that is used
+                                  when multiple rules would apply different listeners
+                                  to a policy map entry. Behavior of this is implementation
+                                  dependent.
+                                maximum: 100
+                                minimum: 1
+                                type: integer
                             required:
                             - envoyConfig
                             - name
@@ -1769,6 +1777,14 @@ spec:
                                 description: Name is the name of the listener.
                                 minLength: 1
                                 type: string
+                              priority:
+                                description: Priority for this Listener that is used
+                                  when multiple rules would apply different listeners
+                                  to a policy map entry. Behavior of this is implementation
+                                  dependent.
+                                maximum: 100
+                                minimum: 1
+                                type: integer
                             required:
                             - envoyConfig
                             - name
@@ -2933,6 +2949,14 @@ spec:
                                   description: Name is the name of the listener.
                                   minLength: 1
                                   type: string
+                                priority:
+                                  description: Priority for this Listener that is
+                                    used when multiple rules would apply different
+                                    listeners to a policy map entry. Behavior of this
+                                    is implementation dependent.
+                                  maximum: 100
+                                  minimum: 1
+                                  type: integer
                               required:
                               - envoyConfig
                               - name
@@ -4323,6 +4347,14 @@ spec:
                                   description: Name is the name of the listener.
                                   minLength: 1
                                   type: string
+                                priority:
+                                  description: Priority for this Listener that is
+                                    used when multiple rules would apply different
+                                    listeners to a policy map entry. Behavior of this
+                                    is implementation dependent.
+                                  maximum: 100
+                                  minimum: 1
+                                  type: integer
                               required:
                               - envoyConfig
                               - name
