helm: add resources via initResources for the agent init containers
[ upstream commit de788fa9be616383c0146cd7282db032408f1b6b ]

Signed-off-by: Andrii Iuspin <yuspin@gmail.com>
Signed-off-by: Tam Mach <tam.mach@cilium.io>
Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -194,6 +194,9 @@ resources: {}
   #   cpu: 100m
   #   memory: 512Mi
 
+# -- resources & limits for the agent init containers
+initResources: {}
+
 # -- Security context to be added to agent pods
 securityContext:
   # runAsUser: 0
