--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -792,6 +792,11 @@ data:
   hubble-disable-tls: "true"
 {{- end }}
 {{- end }}
+{{- if .Values.hubble.dropEventEmitter.enabled }}
+  hubble-drop-events: "true"
+  hubble-drop-events-history-size: {{ .Values.hubble.dropEventEmitter.historySize | quote }}
+  hubble-drop-events-interval: {{ .Values.hubble.dropEventEmitter.interval | quote }}
+{{- end }}
 {{- if .Values.hubble.preferIpv6 }}
   hubble-prefer-ipv6: "true"
 {{- end }}
