ci-ipsec-upgrade: Add vxlan w/ no EP routes
[ upstream commit f7894740c1bdd5ac877ad14ec0e6c1bf60687c73 ]

This is more common configuration than the existing vxlan + EP one.

Signed-off-by: Martynas Pumputis <m@lambda.lt>
Signed-off-by: Nicolas Busseneau <nicolas@isovalent.com>
Signed-off-by: Marco Iorio <marco.iorio@isovalent.com>

--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false
       max-parallel: 16
       matrix:
-        config: ['5.4', '5.10', 'bpf-next']
+        config: ['5.4', '5.10', '6.1', 'bpf-next']
         mode: ['minor', 'patch']
         include:
           # Define three config sets
@@ -98,6 +98,17 @@ jobs:
             endpoint-routes: 'true'
             ipv6: 'false' # until https://github.com/cilium/cilium/issues/26944 resolved
 
+          - config: '6.1'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.1-20231026.065108'
+            kube-proxy: 'iptables'
+            kpr: 'disabled'
+            tunnel: 'vxlan'
+            encryption: 'ipsec'
+            endpoint-routes: 'false'
+            # https://github.com/cilium/cilium/issues/29805#issuecomment-1855600171
+            ipv6: 'false'
+
           - config: 'bpf-next'
             # We don't want to update bpf-next after branching
             kernel: 'bpf-next-20230420.212204'
@@ -117,21 +128,29 @@ jobs:
             mode: 'minor'
             name: '2'
 
-          - config: 'bpf-next'
+          - config: '6.1'
             mode: 'minor'
             name: '3'
 
-          - config: '5.4'
-            mode: 'patch'
+          - config: 'bpf-next'
+            mode: 'minor'
             name: '4'
 
-          - config: '5.10'
+          - config: '5.4'
             mode: 'patch'
             name: '5'
 
-          - config: 'bpf-next'
+          - config: '5.10'
             mode: 'patch'
             name: '6'
+
+          - config: '6.1'
+            mode: 'patch'
+            name: '7'
+
+          - config: 'bpf-next'
+            mode: 'patch'
+            name: '8'
 
     timeout-minutes: 60
     steps:
